syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/alpha-pos-system-sales-service";

// Standard JWT claims
message StandardClaims {
  string audience = 1;  
  int64 expiresAt = 2;  
  string id = 3;  
  int64 issuedAt = 4;  
  string issuer = 5;  
  int64 notBefore = 6;  
  string subject = 7;  
}

// Decoded JWTPayload
message JWTPayload {
  string name = 1;  
  string role = 2;  
  string companyId = 3;  
  string branchId = 4;  
  string storeId = 5;  
  string userId = 6;  
  StandardClaims standardClaims = 7;
}
